# stock-eval-dashboard

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  Makefile  PREREQUISITES.md  PROJECT_STATE.md  README.md  pyproject.toml
docker/: Dockerfile  requirements.txt
docs/: ARCHITECTURE.md  DEPLOYMENT_LOG.md  PROBLEM_STATEMENT.md  PROJECT_STRUCTURE.md
docs/adr/: ADR-001-frontend-framework.md  ADR-002-api-layer.md  ADR-003-compute-lambda.md  ADR-004-data-storage.md  ADR-005-data-providers.md  ADR-006-static-hosting.md
infra/cdk/: app.py  cdk.json  requirements.txt
infra/cdk/stacks/: __init__.py  api_stack.py  frontend_stack.py  storage_stack.py
scripts/: local_lambda.py  seed_tickers.py
src/: legacy_dashboard.py
src/assets/: style.css
src/frontend/: about.html  index.html
src/frontend/css/: style.css
src/frontend/js/: api.js  charts.js  config.js  main.js  state.js
src/lambda/: __init__.py  config.py  handler.py  models.py  refresh_top_tickers.py  requirements.txt
src/lambda/providers/: __init__.py  base.py  composite.py  sec_edgar_provider.py  yfinance_provider.py
tests/: conftest.py
tests/integration/: test_handler_dynamodb.py
tests/unit/: test_composite_provider.py  test_handler.py  test_models.py
