[project]
name = "stock-eval-dashboard"
version = "0.1.0"
description = "Serverless stock evaluation dashboard with interactive Plotly charts"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jack Vance" }]

dependencies = [
    "boto3>=1.34,<2",
    "pydantic>=2.5,<3",
    "yfinance>=0.2.36,<1",
    "pandas>=2.1,<3",
    "requests>=2.31,<3",
    "aws-lambda-powertools>=2.32,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-cov>=4.1,<5",
    "ruff>=0.2,<1",
    "mypy>=1.8,<2",
    "boto3-stubs[dynamodb]>=1.34,<2",
    "moto>=5.0,<6",
]
cdk = [
    "aws-cdk-lib>=2.120,<3",
    "constructs>=10.0,<11",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["lambda_handler", "providers", "shared"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["yfinance.*", "pandas.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
